.. -*- restructuredtext -*-

.. _whats-new:

===============
Release History
===============

Upcoming in **1.7**
===================
.. warning::

    The upcoming Passlib 1.7 will make a number of backwards incompatible changes:

    * **It will require Python 2.6 / 3.2 or newer;
      dropping support for Python 2.5, 3.0, 3.1**

    * The :mod:`passlib.ext.django` extension will require Django 1.6 or newer;
      dropping support for Django 1.5 and earlier.

    * New hashes generated by :class:`!HtpasswdFile` will use the strongest
      algorithm available on the host, rather than one that is guaranteed to be portable.
      Applications can explicitly set ``default_scheme="portable"`` to retain the old behavior
      (new in Passlib 1.6.3).

**1.6.6** (NOT YET RELEASED)
============================

    * :class:`~passlib.CryptContext` instances now pass contextual keywords (such as `"user"`)
      to the hashes that support them, but ignores them for hashes that don't.  This should
      fix :issue:`63`.

**1.6.5** (2015-08-04)
======================

   Fixed some minor bugs in the test suite which were causing erroneous test failures
   (:issue:`57` and :issue:`58`). The passlib library itself is unchanged.
   
**1.6.4** (2015-07-25)
======================

    This release rolls up assorted bug & compatibility fixes since 1.6.2.

Bugfixes
--------

    * Correctly detect bcrypt 2.0.  Previous releases were incorrectly detecting it as py-bcrypt,
      causing spurious errors (:issue:`56`).

    * CryptContext now accepts scheme names as unicode (:issue:`54`).

    * :mod:`passlib.ext.django` now works correctly with Django 1.7-1.8. Previous
      releases had various test failures (:issue:`52`).

    * :class:`passlib.apache.HtpasswdFile` now recognizes bcrypt, sha256_crypt, sha512_crypt
      hashes (:issue:`55`).

BCrypt Changes
--------------

    A few changes have been made to the :class:`~passlib.hash.bcrypt` hash:
